# template_project

./: README.md  ccds.json
{{ cookiecutter.repo_name }}/: .gitignore  .poetry.toml  Makefile  pyproject.toml
{{ cookiecutter.repo_name }}/notebooks/: 1_ov_init-data-exploration.ipynb
{{ cookiecutter.repo_name }}/reports/templates/: ait_valgaev_ppt.pptx  ait_valgaev_word.docx  ait_valgaev_word_report.docx
