[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = {{ cookiecutter.module_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }} },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    {% if cookiecutter.open_source_license == 'MIT' %}"License :: OSI Approved :: MIT License"{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}"License :: OSI Approved :: BSD License"{% endif %}
]
requires-python = "~={{ cookiecutter.python_version_number }}"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["{{ cookiecutter.module_name }}"]
force_sort_within_sections = true



[tool.poetry]
name =  "{{cookiecutter.project_name}}"
version =  "{{ cookiecutter.project_version }}"
description =  "{{ cookiecutter.description }}"
readme =  "README.md"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license =  "{{ cookiecutter.open_source_license }}"

[tool.poetry.config]
virtualenvs.create = false


[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version_number}}"
numpy = "*"
pandas = "*"
matplotlib = "*"
scipy = "*"
seaborn = "*"
jupyter = "*"
scikit-learn = "*"
python-dotenv = "*"
ipykernel = "*"
notebook = "*"



[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
